crates/pgls_pretty_print/tests/snapshots/multi/tests__oid_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/oid_60.sql
snapshot_kind: text
---
CREATE TABLE oid_tbl ( f1 OID );

INSERT INTO oid_tbl (f1) VALUES ('1234');

INSERT INTO oid_tbl (f1) VALUES ('1235');

INSERT INTO oid_tbl (f1) VALUES ('987');

INSERT INTO oid_tbl (f1) VALUES ('-1040');

INSERT INTO oid_tbl (f1) VALUES ('99999999');

INSERT INTO oid_tbl (f1) VALUES ('5     ');

INSERT INTO oid_tbl (f1) VALUES ('   10  ');

INSERT INTO oid_tbl (f1) VALUES ('	  15 	  ');

INSERT INTO oid_tbl (f1) VALUES ('');

INSERT INTO oid_tbl (f1) VALUES ('    ');

INSERT INTO oid_tbl (f1) VALUES ('asdfasd');

INSERT INTO oid_tbl (f1) VALUES ('99asdfasd');

INSERT INTO oid_tbl (f1) VALUES ('5    d');

INSERT INTO oid_tbl (f1) VALUES ('    5d');

INSERT INTO oid_tbl (f1) VALUES ('5    5');

INSERT INTO oid_tbl (f1) VALUES (' - 500');

INSERT INTO oid_tbl (f1) VALUES ('32958209582039852935');

INSERT INTO oid_tbl (f1) VALUES ('-23582358720398502385');

SELECT * FROM oid_tbl;

SELECT pg_input_is_valid('1234', 'oid');

SELECT pg_input_is_valid('01XYZ', 'oid');

SELECT * FROM pg_input_error_info('01XYZ', 'oid');

SELECT pg_input_is_valid('9999999999', 'oid');

SELECT * FROM pg_input_error_info('9999999999', 'oid');

SELECT pg_input_is_valid(' 1 2  4 ', 'oidvector');

SELECT pg_input_is_valid('01 01XYZ', 'oidvector');

SELECT * FROM pg_input_error_info('01 01XYZ', 'oidvector');

SELECT pg_input_is_valid('01 9999999999', 'oidvector');

SELECT
  *
FROM
  pg_input_error_info(
  '01 9999999999',
  'oidvector'
  );

SELECT o.* FROM oid_tbl AS o WHERE o.f1 = 1234;

SELECT o.* FROM oid_tbl AS o WHERE o.f1 <> '1234';

SELECT o.* FROM oid_tbl AS o WHERE o.f1 <= '1234';

SELECT o.* FROM oid_tbl AS o WHERE o.f1 < '1234';

SELECT o.* FROM oid_tbl AS o WHERE o.f1 >= '1234';

SELECT o.* FROM oid_tbl AS o WHERE o.f1 > '1234';

DROP TABLE "oid_tbl";
